# Cpp-Long-Arithmetic

./: .gitignore  CMakeLists.txt  LongArithmetic.cpp  LongArithmetic.h  LongArithmetic.hpp  README.md  copyCmakelist.txt  easy_tests  main.cpp
my-library/: CMakeLists.txt  LongArithmetic.cpp  LongArithmetic.hpp
tests/: 1-copy-test.cpp  10-divide-operator.cpp  11-unary-minus.cpp  12-equals.cpp  13-comparison.cpp  14-power.cpp  15-sqrt.cpp  16-arctan.cpp  17-abs.cpp  18-change-precision.cpp  2-constructor-from-string.cpp  3-constructor-from-float.cpp  4-constructor-from-double.cpp  5-constructor-from-long-long.cpp  6-to-string-method.cpp  7-plus-operator.cpp  8-minus-operator.cpp  9-multiply-operator.cpp  CMakeLists.txt  very_good_test.cpp
